# tr7-exalus-local

./: .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  config.example.json  hacs.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ha-compatibility.yml  tests.yml  validate.yml
.run/: Python tests.run.xml  interactive.run.xml  session_probe.run.xml  smoke_test.run.xml
custom_components/tr7_exalus_local/: __init__.py  config_flow.py  connection.py  const.py  coordinator.py  cover.py  manifest.json  tr7_api.py
custom_components/tr7_exalus_local/translations/: de.json  en.json
scripts/: hacs_validate.sh  interactive.py  session_probe.py  smoke_test.py  smoke_test_config.example.json
tests/: conftest.py
tests/unit/: test_connection.py  test_connection_manager.py  test_cover.py  test_set_position.py  test_state_parsing.py  test_tasks_update.py
tests/unit/fixtures/: state_changed.json
