[project]
name = "tr7-exalus-local"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = ["websockets>=16.0"]

[project.optional-dependencies]
# pytest, pytest-asyncio, coverage, etc. are pinned transitively by
# pytest-homeassistant-custom-component to match Home Assistant core's test
# requirements. Do NOT pin them here too — independent floors conflict with
# those exact pins (e.g. pytest-asyncio==0.24.0) and break resolution.
dev = [
    "pytest-homeassistant-custom-component>=0.13.205",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: requires a real TR7 device (skipped by default)"]
addopts = "-m 'not live'"
